# klinikatlas-api

./: CNAME  README.md  README_en.md  generator_config.yaml  index.html  openapi.yaml  openapi_en.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/docs/: DefaultApi.md  FileadminJsonGermanPlacesJsonGet200ResponseInner.md  FileadminJsonGermanStatesJsonGet200ResponseInner.md  FileadminJsonIcdCodesJsonGet200ResponseInner.md  FileadminJsonLocationsJsonGet200ResponseInner.md  FileadminJsonOpsCodesJsonGet200ResponseInner.md  FileadminJsonStatesJsonGet200ResponseInner.md  SearchresultsGet200Response.md  SearchresultsGet200ResponseFilters.md  SearchresultsGet200ResponseFiltersFieldsInner.md  SearchresultsGet200ResponseFiltersFieldsInnerOptionsInner.md  SearchresultsGet200ResponseFiltersFieldsInnerSliderOptionsInner.md  SearchresultsGet200ResponseMetaInfos.md  SearchresultsGet200ResponseMetaInfosSearchArguments.md  SearchresultsGet200ResponseResultsInner.md  SearchresultsGet200ResponseResultsInnerContent.md  SearchresultsGet200ResponseResultsInnerContentItemsInner.md  SearchresultsGet200ResponseSortings.md  SearchresultsGet200ResponseSortingsFieldsInner.md  SearchresultsGet200ResponseSortingsFieldsInnerOptionsInner.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/test/: test_default_api.py  test_fileadmin_json_german_places_json_get200_response_inner.py  test_fileadmin_json_german_states_json_get200_response_inner.py  test_fileadmin_json_icd_codes_json_get200_response_inner.py  (+16 more)
(+38 files in other folders)
